<resources>
    <string name="app_name">ورتل القرأن</string>
    <string name="title_activity_nafigation_drawer">NafigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="intro_text_1">يقال لصاحب القرأن يوم القيامه ارتقى ورتل فأن منزلتك عند اخر ايه تقراها</string>
    <string name="intro_text_2">اعطاء اجازه متصله بالسند</string>
    <string name="intro_text_3">"هل من مشمر الى الجنه "</string>
    <string name="write_message">اكتب رساله</string>
    <string name="phone">الجوال</string>
    <string name="status">الحاله</string>
    <string name="quran_ijazah">الاجازات المتصله بالسند</string>
    <string name="home_screen">الصفحه الرئيسيه</string>
    <string name="profile">الصفحه الشخصيه</string>
    <string name="administration">الاداره</string>
    <string name="extra_session">تسميع اضافى</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="start_tartel_now">رتل القرأن معنا</string>
    <string name="welcome">مرحبا</string>
    <string name="elchiekh">الشيخ</string>
    <string name="schedule">الجدول</string>
    <string name="class_room">الفرقه</string>
    <string name="settings">اﻷعدادات</string>
    <string name="chiekh_name">اﻷسم</string>
    <string name="video_call">video_call</string>
    <string name="audio_call">audio_call</string>

    <string name="saturday">السبت</string>
    <string name="regular_date">15 مايو</string>
    <string name="higri_date">5 شوال</string>
    <string name="attendance">الحضور</string>
    <string name="new_save">حفظ جديد</string>
    <string name="rate_new_save">10/8</string>
    <string name="near_past">ماضي قريب</string>
    <string name="far_past">ماضي بعيد</string>
    <string name="metn">المتن</string>
    <string name="check">check</string>

    <string name="year">2020</string>
    <string name="slash">/</string>
    <string name="save">حفظ</string>
    <string name="sora">سورة الواقعة من 1 الى 2</string>
    <string name="student_table">جدول الطالب</string>
    <string name="student_chat">محادثة مع الطالب</string>
    <string name="ratel">ورتل القرآن</string>
    <string name="privacy_policy">سياسه الخصوصيه</string>
    <string name="about_wratel">عن ورتل القرأن</string>
    <string name="welcome_to">مرحبا بك...</string>
    <string name="language">اللغه</string>
    <string name="arabic">عربي</string>
    <string name="english">English</string>
    <string name="alarm">التنبيه</string>
    <string name="clock">الساعه</string>
    <string name="half_an_hour">نصف ساعه</string>
    <string name="if_can_subsribe">ان كنت تريد الاشتراك معنا لتنال مثل أجر التالين لكتاب الله عز وجل فمرحبا بك وجزاك الله خير الجزاء، فإن من أعان على خير أصابه، قال النبي صلى الله عليه وسلم: من دعا إلى هدى كان له من الأجر مثل أجور من اتبعه إلى يوم القيامة لا ينقص ذلك من أجورهم شيئاً</string>
    <string name="vf_cash">رقم فودافون كاش</string>
    <string name="alarm_before_meeting">حيث يتم التنبيه قبل الجلسه</string>
    <string name="alaa_name">الاء علي</string>
    <string name="_01123845380">01123845380</string>
    <string name="center_number">رقم حساب المعهد</string>
    <string name="_11111111">11111111</string>
    <string name="pease_send_massage_to_adminstrator">الرجاء ارسال رساله الي الاداره عند التحويل</string>
    <string name="subscribe">قيمه الاشتراك الشهري 50جنيه</string>
    <string name="exception_pay">لايوجد حرج لغير القادرين ان شاء الله</string>
    <string name="add">اضافه</string>
    <string-array name="rate">
        <item>10/1</item>
        <item>10/2</item>
        <item>10/3</item>
        <item>10/4</item>
        <item>10/5</item>
        <item>10/6</item>
        <item>10/7</item>
        <item>10/8</item>
        <item>10/9</item>
        <item>10/10</item>
    </string-array>

    <string-array name="sex">
        <item>ذكر</item>
        <item>انثى</item>
    </string-array>

    <string-array name="new_user_state">
        <item>اشتراك جديد</item>
        <item>مشترك سابقا</item>
    </string-array>


    <string-array name="governorate">
        <item>القاهرة</item>
        <item>القليوبيه</item>
        <item>حلوان</item>
        <item>6 اكتوبر</item>
        <item>الجيزة</item>
        <item>الإسكندرية</item>
        <item>الإسماعيلية</item>
        <item>الدقهلية</item>
        <item>البحر الأحمر</item>
        <item>البحيرة</item>
        <item>الفيوم</item>
        <item>الغربية</item>
        <item>المنوفية</item>
        <item>المنيا</item>
        <item>الوادي الجديد</item>
        <item>الشرقية</item>
        <item>السويس</item>
        <item>أسوان</item>
        <item>أسيوط</item>
        <item>بني سويف</item>
        <item>بورسعيد</item>
        <item>دمياط</item>
        <item>جنوب سيناء</item>
        <item>كفرالشيخ</item>
        <item>مطروح</item>
        <item>قنا</item>
        <item>العريش</item>
        <item>سوهاج</item>
    </string-array>

    <string-array name="classes">
        <item>تمهيدى</item>
        <item>الفرق الاولى</item>
        <item>الفرق الثانيه</item>
        <item>الفرق الثالثه</item>
        <item>الفرق الرابعه</item>
        <item>الفرق الخامسه</item>
        <item>الفرق السادسه</item>
    </string-array>

    <string-array name="days">
        <item>السبت</item>
        <item>اﻷحد</item>
        <item>الاثنين</item>
        <item>الثلاثاء</item>
        <item>اﻷربعاء</item>
        <item>الخميس</item>
        <item>الجمعه</item>
    </string-array>

    <string-array name="time">
        <item> من 08.00 ص - الى 08.30 ص </item>
        <item> من 08.30 ص - الى 09.00 ص </item>
        <item> من 09.00 ص - الى 09.30 ص </item>
        <item> من 10.00 ص - الى 10.30 ص </item>
        <item> من 10.30 ص - الى 11.00 ص </item>
        <item> من 11.00 ص - الى 11.30 ص </item>
        <item> من 11.30 ص - الى 12.00 م </item>
        <!--        <item> من 12.00 م - الى 12.30 م </item>-->
        <item> من 12.30 م - الى 01.00 م </item>
        <item> من 01.00 م - الى 01.30 م </item>
        <item> من 01.30 م - الى 02.00 م </item>
        <item> من 02.00 م - الى 02.30 م </item>
        <item> من 02.30 م - الى 03.00 م </item>
        <!--        <item> من 03.00 م - الى 03.30 م </item>-->
        <item> من 03.30 م - الى 04.00 م </item>
        <item> من 04.00 م - الى 04.30 م </item>
        <item> من 04.30 م - الى 05.00 م </item>
        <item> من 05.00 م - الى 05.30 م </item>
        <item> من 05.30 م - الى 06.00 م </item>
        <item> من 06.00 م - الى 06.30 م </item>
        <!--        <item> من 06.30 م - الى 07.00 م </item>-->
        <item> من 07.00 م - الى 07.30 م </item>
        <item> من 07.30 م - الى 08.00 م </item>
        <!--        <item> من 08.00 م - الى 08.30 م </item>-->
        <item> من 08.30 م - الى 09.00 م </item>
        <item> من 08.30 م - الى 09.00 م </item>
        <item> من 09.00 م - الى 09.30 م </item>
        <item> من 10.00 م - الى 10.30 م </item>
        <item> من 10.30 م - الى 11.00 م </item>
        <item> من 11.00 م - الى 11.30 م </item>
        <item> من 11.30 م - الى 12.00 ص </item>
    </string-array>

    <string-array name="countries">
        <item>مصر</item>
        <item>الجزائر</item>
        <item>السودان</item>
        <item>العراق</item>
        <item>المغرب</item>
        <item>السعوديه</item>
        <item>اليمن</item>
        <item>سوريا</item>
        <item>الصومال</item>
        <item>تونس</item>
        <item>الأردن</item>
        <item> الإمارات العربية المتحدة</item>
        <item>لبيا</item>
        <item>فلسطين</item>
        <item>عمان</item>
        <item>الكويت</item>
        <item>موريتانيا</item>
        <item>قطر</item>
        <item>البرحين</item>
        <item>جيبوتى</item>
        <item>جزر القمر</item>
    </string-array>

    <string-array name="attendance_state">
        <item>حضر</item>
        <item>اعتذار</item>
        <item>غياب</item>
    </string-array>
    <string name="ahmed_sameh">الشيخ / احمد سامح</string>
    <string name="_00_00">00:00</string>

    <string name="schedual">الجدول</string>
    <string name="notifications">notifications</string>
    <string name="subscription">الاشتراك</string>
    <string name="thePreviousMemorization">مقدار الحفظ السابق</string>
    <string name="thSutiableDayForWeeklySession">اليوم المناسب للتسميع الاسبوعي</string>
    <string name="thSutiableDay">اليوم المناسب</string>
    <string name="thSutiableTime">التوقيت المناسب</string>
    <string name="halfHourForWeeklySession">نصف ساعه للتسميع الاسبوعى</string>
    <string name="shiekhName">الشيخ</string>
    <string name="register">تسجيل</string>
    <string name="quranReadings">القراءات</string>
    <string name="suitableDays">الايام المناسبه</string>
    <string name="pleaseWriteYourPhoneToSendVerificationMessage">من فضلك ادخل رقم الجوال ليتم ارسال رمز التفعيل</string>
    <string name="next">استمر</string>
    <string name="RememberPassword">تذكر كلمه المرور</string>
    <string name="createAccount">انشاء حساب</string>
    <string name="phoneConfirmation">تاكيد رقم الجوال</string>
    <string name="pleaseWriteYourPhone">من فضلك ادخل رقم الجوال</string>
    <string name="password">كلمه المرور</string>
    <string name="forgotYourPassword">نسيت كلمه المرور؟</string>
    <string name="rememberMe">تذكرنى ؟</string>
    <string name="doYouHaveAnAccount">هل لديك حساب؟</string>
    <string name="registerNow">سجل الان</string>
    <string name="birthDate">تاريخ الميلاد</string>
    <string name="gender">النوع</string>
    <string name="governorate">المحافظه</string>
    <string name="country">البلد</string>
    <string name="confirmPassword">تأكيد كلمه المرور</string>
    <string name="email">البريد الالكترونى</string>
    <string name="fullName">الاسم بالكامل</string>
    <string name="login">تسجيل الدخول</string>
    <string name="pleaseChooseUserType">يرجى تحديد نوع الحساب</string>
    <string name="student">طالب</string>
    <string name="teacher">معلم</string>
    <string name="pleaseWriteVerificationCode">من فضلك ادخل رمز التفعيل الذى وصلك على الهاتف</string>
    <string name="resend">اعاده ارسال</string>
    <string name="degree">الدرجه</string>
    <string name="meton">المتون</string>
    <string name="farPast">الماضى البعيد</string>
    <string name="nearPast">الماضى القريب</string>
    <string name="newMemorizing">الحفظ الجديد</string>
    <string name="video">فديو</string>
    <string name="audio">صوت</string>
    <string name="sendRequesteToStartSession">ارسال طلب لبدء جلسه</string>
    <string name="accept">قبول</string>
    <string name="reject">رفض</string>
    <string name="suggestions_and_improvements">الاقتراحات والتحسينات</string>
    <string name="expenses">المصروفات</string>
    <string name="cancel">الغاء</string>

    <string name="media_url_mp3">https://storage.googleapis.com/exoplayer-test-media-0/Jazz_In_Paris.mp3</string>
    <!-- Big Buck Bunny video provided by the Blender Foundation.
    (c) copyright 2008, Blender Foundation / www.bigbuckbunny.org -->
    <string name="media_url_mp4">https://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>
    <string name="media_url_dash"><![CDATA[https://www.youtube.com/api/manifest/dash/id/bf5bb2419360daf1/source/youtube?as=fmp4_audio_clear,fmp4_sd_hd_clear&sparams=ip,ipbits,expire,source,id,as&ip=0.0.0.0&ipbits=0&expire=19000000000&signature=51AF5F39AB0CEC3E5497CD9C900EBFEAECCCB5C7.8506521BFC350652163895D4C26DEE124209AA9E&key=ik0]]></string>


</resources>