<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:iconTint="@color/black"
            android:title="@string/home_screen" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:iconTint="@color/black"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_chat"
            android:iconTint="@color/black"
            android:title="@string/administration" />
        <item
            android:id="@+id/nav_extra"
            android:icon="@drawable/ic_plus"
            android:iconTint="@color/black"
            android:title="@string/extra_session" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:iconTint="@color/red"
            android:title="@string/logout" />
    </group>
</menu>