<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.activities.destinations.navUi.settings.SettingsFragment">

    <TextView
        android:id="@+id/tv_sting_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/andalus"
        android:text="@string/welcome_to"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_student_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="216dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/andalus"
        android:text="@string/alaa_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_person"
        android:fontFamily="@font/segoe_ui_bold"
        android:text="@string/profile"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/tv_about_wratel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/segoe_ui_bold"
        android:text="@string/about_wratel"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:drawableStart="@drawable/ic_help"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile"
        tools:layout_editor_absoluteX="190dp" />



    <TextView
        android:id="@+id/tv_privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/segoe_ui_bold"
        android:text="@string/privacy_policy"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        android:drawableStart="@drawable/ic_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_about_wratel" />

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/segoe_ui_bold"
        android:text="@string/language"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_privacy_policy"
        tools:layout_editor_absoluteX="315dp" />

    <RadioGroup
        android:id="@+id/radio_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@id/tv_language"
        app:layout_constraintTop_toBottomOf="@id/tv_privacy_policy"
        tools:layout_editor_absoluteX="98dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arabic"
            android:textSize="20sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/english"
            android:textSize="20sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/segoe_ui_bold"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_language" />

    <TextView
        android:id="@+id/tv_alarm_before"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_before_meeting"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/segoe_ui_bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@id/radio_language"
        app:layout_constraintStart_toEndOf="@id/tv_alarm"/>

    <RadioGroup
        android:id="@+id/radio_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="80dp"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@id/tv_alarm_before">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/clock"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/half_an_hour"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/add"/>

    </RadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="20sp"
        android:fontFamily="@font/segoe_ui_bold"
        android:textColor="@color/red"
        android:drawableStart="@drawable/ic_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_time"
        android:layout_marginTop="21dp" />

</androidx.constraintlayout.widget.ConstraintLayout>