<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="@drawable/radius_rectangle_time_table"
    android:padding="25dp">

    <TextView
        android:id="@+id/tv_day_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/segoe_ui"
        android:text="@string/saturday"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_regular_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/segoe_ui"
        android:text="@string/regular_date"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/mid"
        app:layout_constraintRight_toLeftOf="@id/tv_day_name"
        app:layout_constraintTop_toBottomOf="@id/tv_day_name" />

    <TextView
        android:id="@+id/tv_higri_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui"
        android:text="@string/higri_date"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/mid"
        app:layout_constraintLeft_toRightOf="@id/tv_day_name"
        app:layout_constraintTop_toTopOf="@id/tv_regular_date" />

    <View
        android:id="@+id/view_under_line"
        android:layout_width="200dp"
        android:layout_height="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/cyan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_regular_date" />

    <TextView
        android:id="@+id/tv_attendance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:fontFamily="@font/segoe_ui"
        android:text="@string/attendance"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/large"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_higri_date"
        app:layout_constraintTop_toBottomOf="@id/view_under_line" />

    <ImageView
        android:id="@+id/iv_check"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="25dp"
        android:src="@drawable/check"
        android:contentDescription="@string/check"
        android:tint="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="@id/tv_regular_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_under_line" />

    <TextView
        android:id="@+id/tv_new_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/segoe_ui"
        android:text="@string/new_save"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/large"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="@id/tv_attendance"
        app:layout_constraintTop_toBottomOf="@id/tv_attendance" />

    <TextView
        android:id="@+id/tv_rate_new_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui"
        android:text="@string/rate_new_save"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/iv_check"
        app:layout_constraintStart_toStartOf="@id/iv_check"
        app:layout_constraintTop_toTopOf="@id/tv_new_save" />

    <TextView
        android:id="@+id/tv_near_past"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/segoe_ui"
        android:text="@string/near_past"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/large"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="@id/tv_attendance"
        app:layout_constraintTop_toBottomOf="@id/tv_new_save" />

    <TextView
        android:id="@+id/tv_rate_near_past"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui"
        android:text="@string/rate_new_save"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/iv_check"
        app:layout_constraintStart_toStartOf="@id/iv_check"
        app:layout_constraintTop_toTopOf="@id/tv_near_past" />

    <TextView
        android:id="@+id/tv_far_past"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/segoe_ui"
        android:text="@string/far_past"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/large"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="@id/tv_attendance"
        app:layout_constraintTop_toBottomOf="@id/tv_near_past" />

    <TextView
        android:id="@+id/tv_rate_far_past"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui"
        android:text="@string/rate_new_save"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/iv_check"
        app:layout_constraintStart_toStartOf="@id/iv_check"
        app:layout_constraintTop_toTopOf="@id/tv_far_past" />

    <TextView
        android:id="@+id/tv_metn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/segoe_ui"
        android:text="@string/metn"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/large"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="@id/tv_attendance"
        app:layout_constraintTop_toBottomOf="@id/tv_far_past" />

    <TextView
        android:id="@+id/tv_rate_metn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui"
        android:text="@string/rate_new_save"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/iv_check"
        app:layout_constraintStart_toStartOf="@id/iv_check"
        app:layout_constraintTop_toTopOf="@id/tv_metn" />

</androidx.constraintlayout.widget.ConstraintLayout>